finish graphs, rearrange boxes, wrap line graphs in fixed-height divs

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -51,6 +51,10 @@
     top: 0;
 
 }
+.chartfix {
+    height: 320px;
+    max-height: 320px;
+}
 
 
 /*==================================================
